...
        },
      }}
    >
      <Tabs.Screen
        name="dictionary/index"
        options={{
          title: 'Stitches',
          tabBarAccessibilityLabel: 'Stitches',
          tabBarIcon: ({ color, focused, size }) => (
            <MaterialCommunityIcons
              accessibilityElementsHidden
              color={color}
              name={focused ? 'heart' : 'heart-outline'}
...
          ),
        }}
      />
      <Tabs.Screen
        name="patterns/index"
        options={{
          title: 'Patterns',
          tabBarAccessibilityLabel: 'Patterns',
          tabBarIcon: ({ color, focused, size }) => (
            <MaterialCommunityIcons
              accessibilityElementsHidden
              color={color}
              name={focused ? 'book-open-page-variant' : 'book-open-outline'}
...
          ),
        }}
      />
      <Tabs.Screen
        name="guides/index"
        options={{
          title: 'Guides',
          tabBarAccessibilityLabel: 'Guides',
          tabBarIcon: ({ color, focused, size }) => (
            <MaterialCommunityIcons
              accessibilityElementsHidden
              color={color}
              name={focused ? 'play-box' : 'play-box-outline'}
...
